--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
   </div>
   <div class="baixo container-fluid"><br></div>
   <!--CONTATOS-->
-  <div class="jcontatos container-fluid text-center">
+  <div id="con" class="jcontatos container-fluid text-center">
     <br>
     <div class="row">
       <h3 class="monoton">QUE TAL UM CAFÉ?</h3>
@@ -273,8 +273,8 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-1"></div>
-      <div class="jft col-12 col-md-5">
+      <div class="col-1"></div>
+      <div class="jft col-10 col-md-5">
         <i class="fas fa-map-marker-alt">
           <p>Americana - SP</p>
         </i>
@@ -287,21 +287,26 @@
           <p>joelson.firmino@fatec.sp.gov.br</p>
         </i>
       </div>
-      <div class="jftt col-12 col-md-5">
-    <p>"Frase faopfja kafopw akop fafkopw ako fwapk owap akop afwká fkkakakkak kf"
-      </p>
-  </div>
-    <div class="col-md-1"></div>
-  </div>
-  <br>
-  <div class="row text-center">
-  <div class="col-12 d-inline-block">
-      icone facebook
-      icone linkedin
-      icone github
-      icone whatsapp
-  </div>
-</div>
+      <div class=" d-flex d-md-none col-1"></div>      
+      <div class=" d-flex d-md-none col-1"></div>
+      <div class="jftt col-10 col-md-5">
+        <p>"Maior que a tristeza de não haver vencido é a vergonha de não ter lutado!"
+        </p>
+      </div>
+      <div class="col-1"></div>
+    </div>
+    <br>
+    <div class="row text-center">
+      <div class="col-12 fa-2x jnome">
+        <i class="fab fa-facebook"><a href="#"></a></i>
+        <i class="fab fa-linkedin"><a href="#"></a></i>
+        <i class="fab fa-github"><a href="#"></a></i>
+        <i class="fab fa-whatsapp"><a href="#"></a></i>
+      </div>
+      <div class="row d-block d-md-none">
+        <br><br><br>
+      </div>
+    </div>
 
   </div>
 
