--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
   </div>
   <!--RODAPE-->
 
-  <div class="jfooter  container-fluid col-12 cima">
+  <div class="jfooter container-dark container-fluid col-12 cima">
     <div class="row ">
       <div class="col-12">
         <h1 class="jnome text-center" href="#">JOELSON FELIPE FIRMINO</h1>
@@ -280,11 +280,11 @@
         </i>
         <br>
         <i class="fas fa-phone">
-          <p>+55 19 988-506-890</p>
+          <p> +55 19 988-506-890</p>
         </i>
         <br>
         <i class="fas fa-envelope">
-          <p>joelson.firmino@fatec.sp.gov.br</p>
+          <p> joelson.firmino@fatec.sp.gov.br</p>
         </i>
       </div>
       <div class=" d-flex d-md-none col-1"></div>      
