--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
   </div>
   <!--RODAPE-->
 
-  <div class="jfooter container-dark container-fluid col-12 cima">
+  <div class="jfooter  container-fluid col-12 cima">
     <div class="row ">
       <div class="col-12">
         <h1 class="jnome text-center" href="#">JOELSON FELIPE FIRMINO</h1>
