--- a/index.html
+++ b/index.html
@@ -95,11 +95,7 @@
             <img src="./img/minhafoto.jpg" class="jfoto img-fluid" alt="Uma foto minha bem bonita.">
           </div>
           <div class=" restxt col-12 text-justify">
-            <p> texto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla
-              blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla
-              blabla blatexto bla brgatexto bla blatexto bla
-              blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla
-              bla
+            <p> Profissional competente e de confiança, comprometido com o trabalho de qualidade; Pessoa versátil e multi disciplinar; Versátil na resolução de problemas maximizando recursos; Entusiasmado, confiável e auto motivado; Hábil em lidar com o público, com diplomacia e profissionalismo; Capacidade de adaptação a novos equipamentos e tecnologias.
             </p>
           </div>
         </div>
@@ -109,11 +105,7 @@
         <div class="row ">
           <div class="col-1"></div>
           <div class=" col-5   text-justify">
-            <p> texto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla
-              blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla
-              blabla blatexto bla blatexto bla blatexto bla
-              blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla blatexto bla
-              bla
+            <p> Profissional competente e de confiança, comprometido com o trabalho de qualidade; Pessoa versátil e multi disciplinar; Versátil na resolução de problemas maximizando recursos; Entusiasmado, confiável e auto motivado; Hábil em lidar com o público, com diplomacia e profissionalismo; Capacidade de adaptação a novos equipamentos e tecnologias.
             </p>
           </div>
           <div class="col-1"></div>
