--- a/index.html
+++ b/index.html
@@ -88,48 +88,56 @@
     <h1>RESUMO</h1>
     <p class="lead">"TENHO EM MIM TODOS OS SONHOS DO MUNDO"</p>
     <div class="jresdiv conteiner text-left">
-        <div class="row ">
-          <div class="col-md-1"></div>
-            <div class=" jfotod col-xs-12  col-md-5 ">
-                <figure class="figure">
-                  <img src="./img/minhafoto.jpg" class="figure-img img-fluid rounded" alt="Uma foto minha bem bonita.">
-                </figure>
-              </div>
-          <div class="col-xs-12 col-md-6">
-            <p> Profissional competente e de confiança, comprometido com o trabalho de qualidade.<br>Pessoa versátil e
-              multi disciplinar.<br>Versátil na resolução de problemas maximizando recursos.<br>Entusiasmado, confiável e
-              auto motivado.<br>Hábil em lidar com o público, com diplomacia e profissionalismo.<br>Capacidade de adaptação a
-              novos equipamentos e tecnologias.
-            </p>
-          </div>
+      <div class="row ">
+        <div class="col-md-1"></div>
+        <div class=" jfotod col-xs-12  col-md-5 ">
+          <figure class="figure">
+            <img src="./img/minhafoto.jpg" class="figure-img img-fluid rounded" alt="Uma foto minha bem bonita.">
+          </figure>
+        </div>
+        <div class="col-xs-12 col-md-6">
+          <p> Profissional competente e de confiança, comprometido com o trabalho de qualidade.<br>Pessoa versátil e
+            multi disciplinar.<br>Versátil na resolução de problemas maximizando recursos.<br>Entusiasmado, confiável e
+            auto motivado.<br>Hábil em lidar com o público, com diplomacia e profissionalismo.<br>Capacidade de
+            adaptação a
+            novos equipamentos e tecnologias.
+          </p>
         </div>
       </div>
+    </div>
+    <!--LinhaDoTempo-->
+    <!--
     <button type="button" class="gradiente btn btn-lg btn-primary bio" data-toggle="collapse" data-target="#timeline">Minha
       Historia </button>
-      <!--LinhaDoTempo-->
-    <div id="timeline" class="collapse">
-            <div class="row">
-              <div class="col-12">
-                <ul class="timeline text-left ">
-                  <li>
-                    <a target="_blank" href="https://www.totoprayogo.com/#">New Web Design</a>
-                    <a href="#" class="float-right">21 March, 2014</a><br>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper, et elementum lorem ornare. Maecenas placerat facilisis mollis. Duis sagittis ligula in sodales vehicula....</p>
-                  </li>
-                  <li>
-                    <a href="#">21 000 Job Seekers</a>
-                    <a href="#" class="float-right">4 March, 2014</a><br>
-                    <p>Curabitur purus sem, malesuada eu luctus eget, suscipit sed turpis. Nam pellentesque felis vitae justo accumsan, sed semper nisi sollicitudin...</p>
-                  </li>
-                  <li>
-                    <a href="#">Awesome Employers</a>
-                    <a href="#" class="float-right">1 April, 2014</a><br>
-                    <p>Fusce ullamcorper ligula sit amet quam accumsan aliquet. Sed nulla odio, tincidunt vitae nunc vitae, mollis pharetra velit. Sed nec tempor nibh...</p>
-                  </li>
-                </ul>
-              </div>
-            </div>
-    </div>
+   <div id="timeline" class="collapse">
+      <div class="row">
+        <div class="col-1"></div>
+        <div class="col-10">
+          <ul class="timeline text-left ">
+            <li>
+              <a target="_blank" href="https://www.totoprayogo.com/#">New Web Design</a>
+              <a href="#" class="float-right">21 March, 2014</a><br>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper, et
+                elementum lorem ornare. Maecenas placerat facilisis mollis. Duis sagittis ligula in sodales
+                vehicula....</p>
+            </li>
+            <li>
+              <a href="#">21 000 Job Seekers</a>
+              <a href="#" class="float-right">4 March, 2014</a><br>
+              <p>Curabitur purus sem, malesuada eu luctus eget, suscipit sed turpis. Nam pellentesque felis vitae justo
+                accumsan, sed semper nisi sollicitudin...</p>
+            </li>
+            <li>
+              <a href="#">Awesome Employers</a>
+              <a href="#" class="float-right">1 April, 2014</a><br>
+              <p>Fusce ullamcorper ligula sit amet quam accumsan aliquet. Sed nulla odio, tincidunt vitae nunc vitae,
+                mollis pharetra velit. Sed nec tempor nibh...</p>
+            </li>
+          </ul>
+        </div>
+        <div class="col-1"></div>
+      </div>
+    </div>-->
   </div>
   <div class="baixo container-fluid"><br></div>
   <!--CERTIFICADOS-->
@@ -201,71 +209,59 @@
       </div>
     -->
     </section><br>
-    <button type="button" class="btn-light btn btn-lg  bio" data-toggle="modal" data-target="#modalcert">Ver Todos </button>
+    <button type="button" class="btn-light btn btn-lg  bio" data-toggle="modal" data-target="#modalcert">Ver Todos
+    </button>
   </div>
-<!-- MODAL CERTIFICADOS -->
-<div class="modal fade" id="modalcert" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title "style="font-family:'monoton',cursive;" id="exampleModalLongTitle">CERTIFICADOS</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        ...
+  <!-- MODAL CERTIFICADOS -->
+  <div class="modal fade" id="modalcert" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+    aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title " style="font-family:'monoton',cursive;" id="exampleModalLongTitle">CERTIFICADOS</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="row"><img src="./img/c-css.png"><a href="#">CSS Fundamentals</a></div>
+          <div class="row"><img src="./img/c-js.png"><a href="#">JavaScript Tutorial</a></div>
+          <div class="row"><img src="./img/c-php.png"><a href="#">PHP Tutorial</a></div>
+          <div class="row"><img src="./img/c-sql.png"><a href="#">SQL Fundamentals</a></div>
+          <div class="row"><img src="./img/c-wdr.png"><a href="#">Web Design Responsive</a></div>
+        </div>
       </div>
     </div>
   </div>
-</div>
   <!--PROJETOS-->
   <div id="pro" class="jprojetos carousel cima container-fluid text-center">
 
     <h1> Projetos</h1>
     <section class="jproj">
       <div>
-        <img src="http://placehold.it/320x200" alt="ALT NAME" class="img-responsive" />
-        <h3>Header Name</h3>
-        <p>Description</p>
-        <p ><a href="http://bootsnipp.com/" class="gradiente btn btn-primary btn-block">Open</a>
+        <img src="./img/p-js.png" alt="ALT NAME" class="img-responsive" />
+        <br>
+        <h3>Brincando com JS</h3>
+        <p>Trabalhando com algumas propriedades do js.</p>
+        <p><br><a target="_blank" href="./PROJETOS/JS/index.html" class="gradiente btn btn-primary btn-block">Abrir</a>
+        </p>
+      </div>
+      <div>
+        <img src="./img/p-c.png" alt="ALT NAME" class="img-responsive" />
+        <br>
+        <h3>APA</h3>
+        <p>Utilizando C em 30+ mini projetos, utilizando Vetores, Matrizes, Struct.</p>
+        <p><a href="./PROJETOS/APA/APA.zip" class="gradiente btn btn-primary btn-block">Abrir</a>
         </p>
       </div>
       <div>
         <img src="http://placehold.it/320x200" alt="ALT NAME" class="img-responsive" />
-        <h3>Header Name</h3>
+        <br>
+        <h3>Header Name </h3>
         <p>Description</p>
-        <p ><a href="http://bootsnipp.com/" class="gradiente btn btn-primary btn-block">Open</a>
+        <p><a href="http://bootsnipp.com/" class="gradiente btn btn-primary btn-block">Abrir</a>
         </p>
       </div>
-      <div>
-        <img src="http://placehold.it/320x200" alt="ALT NAME" class="img-responsive" />
-          <h3>Header Name</h3>
-          <p>Description</p>
-          <p ><a href="http://bootsnipp.com/" class="gradiente btn btn-primary btn-block">Open</a>
-          </p>
-        </div>
-        <div>
-          <img src="http://placehold.it/320x200" alt="ALT NAME" class="img-responsive" />
-            <h3>Header Name</h3>
-            <p>Description</p>
-            <p ><a href="http://bootsnipp.com/" class="gradiente btn btn-primary btn-block">Open</a>
-            </p>
-          </div>
-          <div>
-            <img src="http://placehold.it/320x200" alt="ALT NAME" class="img-responsive" />
-            <h3>Header Name</h3>
-            <p>Description</p>
-            <p ><a href="http://bootsnipp.com/" class="gradiente btn btn-primary btn-block">Open</a>
-            </p>
-          </div>
-          <div>
-            <img src="http://placehold.it/320x200" alt="ALT NAME" class="img-responsive" />
-            <h3>Header Name</h3>
-            <p>Description</p>
-            <p ><a href="http://bootsnipp.com/" class="gradiente btn btn-primary btn-block">Open</a>
-            </p>
-          </div>
     </section>
     <button type="button" class="gradiente btn btn-lg btn-primary bio"><a class="style-none" target="_blank" href="https://github.com/joodrew/Projetos">Mais
         Projetos</a></button>
@@ -285,11 +281,15 @@
         </i>
         <br>
         <i class="fas fa-phone">
-          <a href="tel:+5519988506890"><p> +55 19 988-506-890</p></a>
+          <a href="tel:+5519988506890">
+            <p> +55 19 988-506-890</p>
+          </a>
         </i>
         <br>
         <i class="fas fa-envelope">
-          <a href="mailto:joelson.firmino@fatec.sp.gov.br?subject=Que%20tal%20um%20Café"> <p> joelson.firmino@fatec.sp.gov.br</p></a>
+          <a href="mailto:joelson.firmino@fatec.sp.gov.br?subject=Que%20tal%20um%20Café">
+            <p> joelson.firmino@fatec.sp.gov.br</p>
+          </a>
         </i>
       </div>
       <div class=" d-flex d-md-none col-1"></div>
