--- a/PROJETOS/JS/index.html
+++ b/PROJETOS/JS/index.html
@@ -19,7 +19,7 @@
             <h1 class="display-2">JS</h1>
         </header>
         <!-- Navbar-->
-        <nav class="navbar navbar-expand-md navbar-light bg-dark">
+        <nav class="d-block d-md-none navbar navbar-expand-md navbar-light bg-dark">
             <button class="navbtn navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -33,23 +33,85 @@
                         <a class="nav-link" onclick="select(2);" href="#">IMC</a>
                     </li>
                     <li class="nav-item" data-toggle="collapse" data-target="#navbarNav">
-                        <a class="nav-link" onclick="select(3);" href="#">CALCULADORA</a>
+                        <a class="nav-link" onclick="select(3);" href="#">CALCULOS</a>
                     </li>
                     <li class="nav-item" data-toggle="collapse" data-target="#navbarNav">
                         <a class="nav-link" onclick="select(4);" href="#">CORES</a>
                     </li>
                     <li class="nav-item" data-toggle="collapse" data-target="#navbarNav">
-                        <a class="nav-link" onclick="select(this.id);" href="#">ORDEM</a>
+                        <a class="nav-link" onclick="select(5);" href="#">CALCULADORA</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <nav class="d-none d-md-block  navbar navbar-expand-md navbar-light bg-dark">
+            <button class="navbtn navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navjs navbar-nav navbar-center text-center">
+                    <li class="nav-item" data-toggle="collapse" data-target="#navbarNav">
+                        <a class="nav-link" onclick="select(1);" href="#">IDADE</a>
                     </li>
                     <li class="nav-item" data-toggle="collapse" data-target="#navbarNav">
-                        <a class="nav-link" onclick="select(this.id);" href="#">TABUADA</a>
+                        <a class="nav-link" onclick="select(2);" href="#">IMC</a>
+                    </li>
+                    <li class="nav-item" data-toggle="collapse" data-target="#navbarNav">
+                        <a class="nav-link" onclick="select(3);" href="#">CALCULOS</a>
+                    </li>
+                    <li class="nav-item" data-toggle="collapse" data-target="#navbarNav">
+                        <a class="nav-link" onclick="select(4);" href="#">CORES</a>
+                    </li>
+                    <li class="nav-item" data-toggle="collapse" data-target="#navbarNav">
+                        <a class="nav-link" onclick="select(5);" href="#">CALCULADORA</a>
                     </li>
                 </ul>
             </div>
         </nav>
         <br>
         <article class="container-fluid">
+            <!--CALCULADORA-->
+            <section id="calculadora" class=" row d-none">
+                <div class="col d-flex justify-content-center">
+                    <br>
+                    <div class="calculadora">
+                        <input type="text" id="resultadoc" class="form-control resultado" placeholder="0" disabled="disabled">
 
+                        <div class="row">
+                            <button onclick="calcular('acao','c')" type="button" class="btn btncalc btn-dark btn-lg clear font-weight-light">C</button>
+                            <button onclick="calcular('acao','/')"type="button" class="btn btncalc btn-dark btn-lg font-weight-light">/</button>
+                            <button onclick="calcular('acao','*')" type="button" class="btn btncalc btn-dark btn-lg font-weight-light">x</button>
+                        </div>
+
+                        <div class="row">
+                            <button onclick="calcular('valor',7)" type="button" class="btn btncalc btn-dark btn-lg font-weight-light">7</button>
+                            <button onclick="calcular('valor',8)" type="button" class="btn btncalc btn-dark btn-lg font-weight-light">8</button>
+                            <button onclick="calcular('valor',9)" type="button" class="btn btncalc btn-dark btn-lg font-weight-light">9</button>
+                            <button onclick="calcular('acao','-')" type="button" class="btn btncalc btn-dark btn-lg font-weight-light">-</button>
+                        </div>
+
+                        <div class="row">
+                            <button onclick="calcular('valor',4)" type="button" class="btn btncalc btn-dark btn-lg font-weight-light">4</button>
+                            <button onclick="calcular('valor',5)" type="button" class="btn btncalc btn-dark btn-lg font-weight-light">5</button>
+                            <button onclick="calcular('valor',6)" type="button" class="btn btncalc btn-dark btn-lg font-weight-light">6</button>
+                            <button onclick="calcular('acao','+')" type="button" class="btn btncalc btn-dark btn-lg font-weight-light">+</button>
+                        </div>
+
+                        <div class="row">
+                            <button onclick="calcular('valor',1)" type="button" class="btn btncalc btn-dark btn-lg font-weight-light">1</button>
+                            <button onclick="calcular('valor',2)" type="button" class="btn btncalc btn-dark btn-lg font-weight-light">2</button>
+                            <button onclick="calcular('valor',3)" type="button" class="btn btncalc btn-dark btn-lg font-weight-light">3</button>
+                            <button onclick="calcular('acao','=')" type="button" class="btn btncalc btn-dark btn-lg enter">=</button>
+                        </div>
+
+                        <div class="row" style="margin-top: -60px">
+                            <button onclick="calcular('valor',0)" type="button" class="btn btncalc btn-dark zero btn-lg font-weight-light">0</button>
+                            <button onclick="calcular('acao','.')" type="button" class="btn btncalc btn-dark btn-lg font-weight-light">.</button>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <!--Idade-->
             <section id="idade" class="row d-none">
                 <div class="col-md-2"></div>
@@ -74,11 +136,11 @@
                 </div>
                 <div class="col-md-2"></div>
             </section>
-            <!--CALCULADORA-->
+            <!--CALCULOS-->
             <section id="calc" class="row d-none">
                 <div class="col-md-2"></div>
                 <div class="col-md-8">
-                    <h1 class="titulo2 text-center col-12">CALCULADORA</h1>
+                    <h1 class="titulo2 text-center col-12">CALCULOS</h1>
                     <input type="text" class="col-12" id="cnum1" placeholder="VALOR I" required>
                     <input type="text" class="col-12" id="cnum2" placeholder="VALOR J" required>
                     <h1 class="text-center">
