--- a/PROJETOS/JS/index.html
+++ b/PROJETOS/JS/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>JavaScript</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <link rel="icon" type="image/ico" href="favicon.ico" />
 
     <link rel="stylesheet" href="./framework/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="./css/main.css" />
