--- a/index.html
+++ b/index.html
@@ -301,8 +301,9 @@
       </div>
       <div class="col-1"></div>
     </div>
-    <br>
-    <div class="row text-center">
+  </div>
+  <div style="background:#67655D;">
+  <div class="row text-center">
       <div class="col-12 fa-2x jnome">
         <a href="https://www.facebook.com/joodrew"><i class="fab fa-facebook"></i></a>
         <a href="https://www.linkedin.com/in/joelson-felipe-firmino-831b85169/"><i class="fab fa-linkedin"></i></a>
