--- a/email.html
+++ b/email.html
@@ -255,8 +255,8 @@ a[x-apple-data-detectors=true] {
   <!--[if (mso)|(IE)]><table width="173" cellpadding="0" cellspacing="0" border="0"><tr><td style="border-collapse:collapse; padding-right: 10px; padding-left: 10px; padding-bottom: 10px;"  align="right"><table width="100%" cellpadding="0" cellspacing="0" border="0" style="border-collapse:collapse; mso-table-lspace: 0pt;mso-table-rspace: 0pt; width:173px;"><tr><td width="32" style="width:32px; padding-right: 5px;" valign="top"><![endif]-->
     <table align="left" border="0" cellspacing="0" cellpadding="0" width="32" height="32" style="border-collapse: collapse;table-layout: fixed;border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;vertical-align: top;Margin-right: 5px">
       <tbody><tr style="vertical-align: top"><td align="left" valign="middle" style="word-break: break-word;border-collapse: collapse !important;vertical-align: top">
-        <a href="https://www.facebook.com/" title="Facebook" target="_blank">
-          <img src="images/facebook@2x.png" alt="Facebook" title="Facebook" width="32" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: block !important;border: none;height: auto;float: none;max-width: 32px !important">
+        <a href="https://www.facebook.com/joodrew" title="Facebook" target="_blank">
+          <img src="https://i.postimg.cc/PNnscc3C/iconfinder-facebook-287594.png" alt="Facebook" title="Facebook" width="32" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: block !important;border: none;height: auto;float: none;max-width: 32px !important">
         </a>
       <div style="line-height:5px;font-size:1px">&#160;</div>
       </td></tr>
@@ -264,8 +264,8 @@ a[x-apple-data-detectors=true] {
       <!--[if (mso)|(IE)]></td><td width="32" style="width:32px; padding-right: 5px;" valign="top"><![endif]-->
     <table align="left" border="0" cellspacing="0" cellpadding="0" width="32" height="32" style="border-collapse: collapse;table-layout: fixed;border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;vertical-align: top;Margin-right: 5px">
       <tbody><tr style="vertical-align: top"><td align="left" valign="middle" style="word-break: break-word;border-collapse: collapse !important;vertical-align: top">
-        <a href="https://www.linkedin.com/" title="LinkedIn" target="_blank">
-          <img src="images/linkedin@2x.png" alt="LinkedIn" title="LinkedIn" width="32" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: block !important;border: none;height: auto;float: none;max-width: 32px !important">
+        <a href="https://www.linkedin.com/in/joelson-felipe-firmino-831b85169/" title="LinkedIn" target="_blank">
+          <img src="https://i.postimg.cc/nVjXyDSx/iconfinder-linkedin-287553.png" alt="LinkedIn" title="LinkedIn" width="32" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: block !important;border: none;height: auto;float: none;max-width: 32px !important">
         </a>
       <div style="line-height:5px;font-size:1px">&#160;</div>
       </td></tr>
@@ -273,8 +273,8 @@ a[x-apple-data-detectors=true] {
       <!--[if (mso)|(IE)]></td><td width="32" style="width:32px; padding-right: 5px;" valign="top"><![endif]-->
     <table align="left" border="0" cellspacing="0" cellpadding="0" width="32" height="32" style="border-collapse: collapse;table-layout: fixed;border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;vertical-align: top;Margin-right: 5px">
       <tbody><tr style="vertical-align: top"><td align="left" valign="middle" style="word-break: break-word;border-collapse: collapse !important;vertical-align: top">
-        <a href="mailto:" title="E-Mail" target="_blank">
-          <img src="images/mail@2x.png" alt="E-Mail" title="E-Mail" width="32" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: block !important;border: none;height: auto;float: none;max-width: 32px !important">
+        <a href="mailto:joelson.firmino@fatec.sp.gov.br" title="E-Mail" target="_blank">
+          <img src="https://i.postimg.cc/KjvJY510/iconfinder-mail-287559.png" alt="E-Mail" title="E-Mail" width="32" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: block !important;border: none;height: auto;float: none;max-width: 32px !important">
         </a>
       <div style="line-height:5px;font-size:1px">&#160;</div>
       </td></tr>
@@ -282,8 +282,8 @@ a[x-apple-data-detectors=true] {
       <!--[if (mso)|(IE)]></td><td width="32" style="width:32px; padding-right: 0;" valign="top"><![endif]-->
     <table align="left" border="0" cellspacing="0" cellpadding="0" width="32" height="32" style="border-collapse: collapse;table-layout: fixed;border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;vertical-align: top;Margin-right: 0">
       <tbody><tr style="vertical-align: top"><td align="left" valign="middle" style="word-break: break-word;border-collapse: collapse !important;vertical-align: top">
-        <a href="" title="Web Site" target="_blank">
-          <img src="images/website@2x.png" alt="Web Site" title="Web Site" width="32" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: block !important;border: none;height: auto;float: none;max-width: 32px !important">
+        <a href="https://api.whatsapp.com/send?phone=5519988506890&text=Ola%2C%20estava%20esperando%20sua%20mensagem!" title="Whatsapp" target="_blank">
+          <img src="https://i.postimg.cc/pTgLWscH/iconfinder-whatsapp-287520.png" alt="Whatsapp" title="Whatsapp" width="32" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: block !important;border: none;height: auto;float: none;max-width: 32px !important">
         </a>
       <div style="line-height:5px;font-size:1px">&#160;</div>
       </td></tr>
@@ -440,7 +440,7 @@ a[x-apple-data-detectors=true] {
 <div align="center" class="button-container center " style="padding-right: 30px; padding-left: 30px; padding-top:30px; padding-bottom:30px;">
   <!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0" style="border-spacing: 0; border-collapse: collapse; mso-table-lspace:0pt; mso-table-rspace:0pt;"><tr><td style="padding-right: 30px; padding-left: 30px; padding-top:30px; padding-bottom:30px;" align="center"><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="" style="height:30pt; v-text-anchor:middle; width:123pt;" arcsize="61%" strokecolor="#3C82A0" fillcolor="#3C82A0"><w:anchorlock/><v:textbox inset="0,0,0,0"><center style="color:#ffffff; font-family:'Catamaran', 'Lucida Sans Unicode', 'Lucida Grande', sans-serif; font-size:18px;"><![endif]-->
     <div style="color: #ffffff; background-color: #3C82A0; border-radius: 25px; -webkit-border-radius: 25px; -moz-border-radius: 25px; max-width: 164px; width: 74px;width: auto; border-top: 0px solid transparent; border-right: 0px solid transparent; border-bottom: 0px solid transparent; border-left: 0px solid transparent; padding-top: 5px; padding-right: 45px; padding-bottom: 0px; padding-left: 45px; font-family: 'Catamaran', 'Lucida Sans Unicode', 'Lucida Grande', sans-serif; text-align: center; mso-border-alt: none;">
-      <span style="font-family:'Catamaran', 'Lucida Sans Unicode', 'Lucida Grande', sans-serif;font-size:16px;line-height:32px;"><span style="font-size: 18px; line-height: 36px;"><strong>CURRÍCULO</strong></span></span>
+      <span style="font-family:'Catamaran', 'Lucida Sans Unicode', 'Lucida Grande', sans-serif;font-size:16px;line-height:32px;"><span style="font-size: 18px; line-height: 36px;"><strong><a href="https://joodrew.github.io/curriculo.pdf" style="color: #ffffff;"> CURRÍCULO</a></strong></span></span>
     </div>
   <!--[if mso]></center></v:textbox></v:roundrect></td></tr></table><![endif]-->
 </div>
@@ -511,7 +511,7 @@ a[x-apple-data-detectors=true] {
 <div align="left" class="button-container left " style="padding-right: 10px; padding-left: 10px; padding-top:0px; padding-bottom:25px;">
   <!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0" style="border-spacing: 0; border-collapse: collapse; mso-table-lspace:0pt; mso-table-rspace:0pt;"><tr><td style="padding-right: 10px; padding-left: 10px; padding-top:0px; padding-bottom:25px;" align="left"><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="" style="height:46pt; v-text-anchor:middle; width:75pt;" arcsize="41%" strokecolor="#FFFFFF" fillcolor="transparent"><w:anchorlock/><v:textbox inset="0,0,0,0"><center style="color:#ffffff; font-family:'Oswald', 'Lucida Sans Unicode', 'Lucida Grande', sans-serif; font-size:30px;"><![endif]-->
     <div style="color: #ffffff; background-color: transparent; border-radius: 25px; -webkit-border-radius: 25px; -moz-border-radius: 25px; max-width: 130px; width: 90px;width: auto; border-top: 4px solid #FFFFFF; border-right: 4px solid #FFFFFF; border-bottom: 4px solid #FFFFFF; border-left: 4px solid #FFFFFF; padding-top: 0px; padding-right: 20px; padding-bottom: 0px; padding-left: 20px; font-family: 'Oswald', 'Lucida Sans Unicode', 'Lucida Grande', sans-serif; text-align: center; mso-border-alt: none;">
-      <span style="font-family:'Oswald', 'Lucida Sans Unicode', 'Lucida Grande', sans-serif;font-size:16px;line-height:32px;"><strong><span style="font-size: 30px; line-height: 54px;">MAIS</span></strong></span>
+      <span style="font-family:'Oswald', 'Lucida Sans Unicode', 'Lucida Grande', sans-serif;font-size:16px;line-height:32px;"><strong><span style="font-size: 30px; line-height: 54px;"><a href="https://joodrew.github.io/" style="color: #ffffff;">MAIS</a></span></strong></span>
     </div>
   <!--[if mso]></center></v:textbox></v:roundrect></td></tr></table><![endif]-->
 </div>
@@ -528,7 +528,7 @@ a[x-apple-data-detectors=true] {
                   
                     <div align="center" class="img-container center  autowidth  " style="padding-right: 0px;  padding-left: 0px;">
 <!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr style="line-height:0px;line-height:0px;"><td style="padding-right: 0px; padding-left: 0px;" align="center"><![endif]-->
-<div style="line-height:20px;font-size:1px">&#160;</div>  <img class="center  autowidth " align="center" border="0" src="./images/euicon.png" alt="Image" title="Image" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: block !important;border: 0;height: auto;float: none;width: 100%;max-width: 152px" width="152">
+<div style="line-height:20px;font-size:1px">&#160;</div>  <img class="center  autowidth " align="center" border="0" src="https://i.postimg.cc/Y9sVWVQv/euicon.png" alt="Image" title="Image" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: block !important;border: 0;height: auto;float: none;width: 100%;max-width: 152px" width="152">
 <!--[if mso]></td></tr></table><![endif]-->
 </div>
 
