--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
   <!--NavbarMobile -->
 
-  <nav class=" navbar d-block d-md-none fixed-bottom cima navbar-expand-lg navbar-dark gradiente bg-dark">
+  <nav  class="navbar d-block d-md-none fixed-bottom cima navbar-expand-lg navbar-dark gradiente bg-dark">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav2" aria-controls="navbarNav"
       aria-expanded="true" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon jnavbar-toggler-icon"></span>
@@ -274,8 +274,7 @@
     <div class="row">
       <h3 class="monoton">QUE TAL UM CAFÉ?</h3>
     </div>
-    <div class="row">
-      <div class="col-1"></div>
+    <div class="row justify-content-center" >
       <div class="jft col-10 col-md-5">
         <i class="fas fa-map-marker-alt">
           <p>Americana - SP</p>
@@ -293,17 +292,14 @@
           </a>
         </i>
       </div>
-      <div class=" d-flex d-md-none col-1"></div>
-      <div class=" d-flex d-md-none col-1"></div>
       <div class="jftt col-10 col-md-5">
         <p>"Maior que a tristeza de não haver vencido é a vergonha de não ter lutado!"
         </p>
       </div>
-      <div class="col-1"></div>
     </div>
   </div>
-  <div style="background:#67655D;">
-  <div class="row text-center">
+  <div style="background:rgb(167, 166, 166);" class="container">
+  <div  class="row text-center">
       <div class="col-12 fa-2x jnome">
         <a href="https://www.facebook.com/joodrew"><i class="fab fa-facebook"></i></a>
         <a href="https://www.linkedin.com/in/joelson-felipe-firmino-831b85169/"><i class="fab fa-linkedin"></i></a>
