--- a/index.html
+++ b/index.html
@@ -298,8 +298,8 @@
       </div>
     </div>
   </div>
-  <div style="background:rgb(167, 166, 166);" class="container">
-  <div  class="row text-center">
+  <div class="container-fluid listra  text-center">
+  <div  class="row">
       <div class="col-12 fa-2x jnome">
         <a href="https://www.facebook.com/joodrew"><i class="fab fa-facebook"></i></a>
         <a href="https://www.linkedin.com/in/joelson-felipe-firmino-831b85169/"><i class="fab fa-linkedin"></i></a>
@@ -308,9 +308,9 @@
             class="fab fa-whatsapp"></i></a>
       </div>
     </div>
-    <div class="row ">
+    <div class="row">
       <div class="col-12">
-        <h1 class="jnome text-center" href="#">JOELSON FELIPE FIRMINO</h1>
+        <h1 class="jnome">JOELSON FELIPE FIRMINO</h1>
       </div>
       <div class="row d-block d-md-none">
         <br><br><br>
