--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
   <div  class="row">
       <div class="col-12 fa-2x jnome">
         <a href="https://www.facebook.com/joodrew"><i class="fab fa-facebook"></i></a>
-        <a href="https://www.linkedin.com/in/joelson-felipe-firmino-831b85169/"><i class="fab fa-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/jffirmino/"><i class="fab fa-linkedin"></i></a>
         <a href="https://github.com/joodrew/"><i class="fab fa-github"></i></a>
         <a href="https://api.whatsapp.com/send?phone=5519988506890&text=Ola%2C%20estava%20esperando%20sua%20mensagem!"><i
             class="fab fa-whatsapp"></i></a>
