--- a/index.html
+++ b/index.html
@@ -97,11 +97,13 @@
           </figure>
         </div>
         <div class="col-xs-12 col-md-6">
-          <p> Profissional competente e de confiança, comprometido com o trabalho de qualidade.<br>Pessoa versátil e
-            multi disciplinar.<br>Versátil na resolução de problemas maximizando recursos.<br>Entusiasmado, confiável e
+
+
+          <p>Meu nome é Joelson Felipe Firmino, tenho 2 lindos filhos e uma linda esposa.  
+            <br>Sou um profissional competente e de confiança, comprometido com o trabalho de qualidade.<br>Versátil na resolução de problemas maximizando recursos.<br>Entusiasmado, confiável e
             auto motivado.<br>Hábil em lidar com o público, com diplomacia e profissionalismo.<br>Capacidade de
             adaptação a
-            novos equipamentos e tecnologias.
+            novos equipamentos e tecnologias.<br>Excelentes capacidades de análise, escrita, raciocínio e de tecnologia da informação.
           </p>
         </div>
       </div>
@@ -264,7 +266,7 @@
         </p>
       </div>
     </section>
-    <button type="button" class="gradiente btn btn-lg btn-primary bio"><a class="style-none" target="_blank" href="https://github.com/joodrew/Projetos">Mais
+    <button type="button" class="gradiente btn btn-lg btn-primary bio"><a class="style-none" target="_blank" href="https://github.com/joodrew/joodrew.github.io/tree/master/PROJETOS">Mais
         Projetos</a></button>
   </div>
   <div class="baixo container-fluid"><br></div>
