projetos index update

--- a/index.html
+++ b/index.html
@@ -258,11 +258,11 @@
         </p>
       </div>
       <div>
-        <img src="http://placehold.it/320x200" alt="ALT NAME" class="img-responsive" />
+        <img src="./img/p-react.png" alt="ALT NAME" class="img-responsive" />
         <br>
-        <h3>Header Name </h3>
-        <p>Description</p>
-        <p><a href="http://bootsnipp.com/" class="gradiente btn btn-primary btn-block">Abrir</a>
+        <h3>MeuAPP</h3>
+        <p>Criação de um aplicativo cross-plataform com React Native</p>
+        <p><a href="#pro" class="gradiente btn btn-primary btn-block"disabled>Inativo</a>
         </p>
       </div>
     </section>
