--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
   <link rel="stylesheet" href="./framework/slick/slick.css" />
   <link rel="stylesheet" href="./framework/slick/slick-theme.css" />
   <link rel="stylesheet" href="./framework/font-awesome/css/all.css">
+<!--  Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-130679820-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-130679820-1');
+</script>
 
 </head>
 
@@ -50,7 +59,7 @@
 
   <!--NavbarMobile -->
 
-  <nav  class="navbar d-block d-md-none fixed-bottom cima navbar-expand-lg navbar-dark gradiente bg-dark">
+  <nav class="navbar d-block d-md-none fixed-bottom cima navbar-expand-lg navbar-dark gradiente bg-dark">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav2" aria-controls="navbarNav"
       aria-expanded="true" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon jnavbar-toggler-icon"></span>
@@ -99,11 +108,13 @@
         <div class="col-xs-12 col-md-6">
 
 
-          <p>Meu nome é Joelson Felipe Firmino, tenho 2 lindos filhos e uma linda esposa.  
-            <br>Sou um profissional competente e de confiança, comprometido com o trabalho de qualidade.<br>Versátil na resolução de problemas maximizando recursos.<br>Entusiasmado, confiável e
+          <p>Meu nome é Joelson Felipe Firmino, tenho 2 lindos filhos e uma linda esposa.
+            <br>Sou um profissional competente e de confiança, comprometido com o trabalho de qualidade.<br>Versátil na
+            resolução de problemas maximizando recursos.<br>Entusiasmado, confiável e
             auto motivado.<br>Hábil em lidar com o público, com diplomacia e profissionalismo.<br>Capacidade de
             adaptação a
-            novos equipamentos e tecnologias.<br>Excelentes capacidades de análise, escrita, raciocínio e de tecnologia da informação.
+            novos equipamentos e tecnologias.<br>Excelentes capacidades de análise, escrita, raciocínio e de tecnologia
+            da informação.
           </p>
         </div>
       </div>
@@ -243,27 +254,33 @@
     <section class="jproj">
       <div>
         <img src="./img/p-js.png" alt="ALT NAME" class="img-responsive" />
-        <br>
-        <h3>Brincando com JS</h3>
-        <p>Trabalhando com algumas propriedades do js.</p>
-        <p><br><a target="_blank" href="./PROJETOS/JS/index.html" class="gradiente btn btn-primary btn-block">Abrir</a>
-        </p>
+        <div class="projtext">
+          <h3>Brincando com JS</h3>
+          <p>Trabalhando com algumas propriedades do js.</p>
+          <br>
+          <p><br><a target="_blank" href="./PROJETOS/JS/index.html" class="gradiente btn btn-primary btn-block">Abrir</a>
+          </p>
+        </div>
       </div>
       <div>
         <img src="./img/p-c.png" alt="ALT NAME" class="img-responsive" />
-        <br>
-        <h3>APA</h3>
-        <p>Utilizando C em 30+ mini projetos, utilizando Vetores, Matrizes, Struct.</p>
-        <p><a href="./PROJETOS/APA/APA.zip" class="gradiente btn btn-primary btn-block">Abrir</a>
-        </p>
+        <div class="projtext">
+          <h3>APA</h3>
+          <p>Utilizando C em 30+ mini projetos, utilizando Vetores, Matrizes, Struct.</p>
+          <br><br>
+          <p><a href="./PROJETOS/APA/APA.zip" class="gradiente btn btn-primary btn-block">Abrir</a>
+          </p>
+        </div>
       </div>
       <div>
         <img src="./img/p-react.png" alt="ALT NAME" class="img-responsive" />
-        <br>
-        <h3>MeuAPP</h3>
-        <p>Criação de um aplicativo cross-plataform com React Native</p>
-        <p><a href="#pro" class="gradiente btn btn-primary btn-block"disabled>Inativo</a>
-        </p>
+        <div class="projtext">
+          <h3>MeuAPP</h3>
+          <p>Criação de um aplicativo cross-plataform com React Native</p>
+          <br><br>
+          <p><a href="#pro" class="gradiente btn btn-primary btn-block" disabled>Inativo</a>
+          </p>
+        </div>
       </div>
     </section>
     <button type="button" class="gradiente btn btn-lg btn-primary bio"><a class="style-none" target="_blank" href="https://github.com/joodrew/joodrew.github.io/tree/master/PROJETOS">Mais
@@ -276,7 +293,7 @@
     <div class="row">
       <h3 class="monoton">QUE TAL UM CAFÉ?</h3>
     </div>
-    <div class="row justify-content-center" >
+    <div class="row justify-content-center">
       <div class="jft col-10 col-md-5">
         <i class="fas fa-map-marker-alt">
           <p>Americana - SP</p>
@@ -301,7 +318,7 @@
     </div>
   </div>
   <div class="container-fluid listra  text-center">
-  <div  class="row">
+    <div class="row">
       <div class="col-12 fa-2x jnome">
         <a href="https://www.facebook.com/joodrew"><i class="fab fa-facebook"></i></a>
         <a href="https://www.linkedin.com/in/jffirmino/"><i class="fab fa-linkedin"></i></a>
