--- a/PROJETOS/MATAMOSCA/gameover.html
+++ b/PROJETOS/MATAMOSCA/gameover.html
@@ -22,7 +22,7 @@
         <div class="row">
             <div class="col">
                 <div class="d-flex justify-content-center">
-                    <button type="button" class="btn btn-light btn-lg" onclick="window.location.href='app.html'">TENTAR DENOVO</button>
+                    <button type="button" class="btn btn-light btn-lg" onclick="window.location.href='index.html'">TENTAR DENOVO</button>
                 </div>
             </div>
         </div>
