--- a/PROJETOS/MATAMOSCA/index.html
+++ b/PROJETOS/MATAMOSCA/index.html
@@ -23,11 +23,11 @@
 	</head>
 	<body>
 
-		<div class="container">
+		<div class="container gameover">
 			<div class="row">
 				<div class="col">
 					<div class="d-flex justify-content-center">
-						<img src="imagens/game.png" />
+						<img class="img-fluid" src="imagens/game.png" />
 					</div>
 				</div>
 			</div>
@@ -36,7 +36,7 @@
 				<div class="col">
 					<div class="d-flex justify-content-center">
 						<div class="mb-2">
-							<select class="form-control " style="text-align-last: center;" id="nivel">
+							<select class="form-control "  id="nivel">
 								<option value="">-- Selecione o nível --</option>
 								<option value="normal">Geek</option>
 								<option value="dificil">Nerd</option>
