--- a/PROJETOS/MATAMOSCA/index.html
+++ b/PROJETOS/MATAMOSCA/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title></title>
-		<meta charset="UTF-8" />
-		<link rel="stylesheet" href="./bootstrap/bootstrap.min.css">
 
-		<link rel="stylesheet" href="main.css" />
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Game Over</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="main.css">
 
 		<script>
 			function iniciarJogo() {
@@ -38,8 +40,8 @@
 						<div class="mb-2">
 							<select class="form-control "  id="nivel">
 								<option value="">-- Selecione o nível --</option>
-								<option value="normal">Geek</option>
-								<option value="dificil">Nerd</option>
+								<option value="geek">Geek</option>
+								<option value="nerd">Nerd</option>
 								<option value="chucknorris">Chuck Norris</option>
 							</select>
 						</div>
