--- a/PROJETOS/MATAMOSCA/gameover.html
+++ b/PROJETOS/MATAMOSCA/gameover.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="main.css">
+    
+    <script>window.scrollTo(0, 1);</script>
 </head>
 
 <body>
