--- a/PROJETOS/MATAMOSCA/app.html
+++ b/PROJETOS/MATAMOSCA/app.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="main.css">
     <script src="jogo.js"></script>
+    <script>window.scrollTo(0, 1);</script>
 </head>
 
 <body id="app" onresize="boardSize()">
