--- a/PROJETOS/MATAMOSCA/index.html
+++ b/PROJETOS/MATAMOSCA/index.html
@@ -59,6 +59,10 @@
 			</div>
 		</div>
 
-		<script>window.scrollTo(0, 1);</script>
+		<script> 
+				if (screenfull.enabled) {
+					  screenfull.request();
+			  }
+			  </script>
 	</body>
 </html>
