--- a/PROJETOS/MATAMOSCA/app.html
+++ b/PROJETOS/MATAMOSCA/app.html
@@ -27,13 +27,16 @@
         </div>
     </div>
     <script>
+        if (screenfull.enabled) {
+            screenfull.request();
+    }
         frecord(nivel)  
         setInterval(function () {
             randPos()
         }, speed)
     </script>
-    
-    <script>window.scrollTo(0, 1);</script>
+    <script>
+            </script>
 </body>
 
 </html>
