--- a/PROJETOS/MATAMOSCA/gameover.html
+++ b/PROJETOS/MATAMOSCA/gameover.html
@@ -28,8 +28,11 @@
             </div>
         </div>
     </div>
-    
-    <script>window.scrollTo(0, 1);</script>
+    <script> 
+      if (screenfull.enabled) {
+            screenfull.request();
+    }
+    </script>
 </body>
 
 </html>
