--- a/PROJETOS/MATAMOSCA/index.html
+++ b/PROJETOS/MATAMOSCA/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="main.css">
 
+    <script src="./screenfull/screenfull.js"></script>
 		<script>
 			function iniciarJogo() {
 				var nivel = document.getElementById('nivel').value
