--- a/index.html
+++ b/index.html
@@ -273,12 +273,12 @@
         </div>
       </div>
       <div>
-        <img src="./img/p-react.png" alt="ALT NAME" class="img-responsive" />
+        <img src="./img/p-dp.png" alt="ALT NAME" class="img-responsive" />
         <div class="projtext">
-          <h3>MeuAPP</h3>
-          <p>Criação de um aplicativo cross-plataform com React Native</p>
+          <h3>DP Revange</h3>
+          <p>A vingança da DP é um jogo baseado em JavaScript estilo mata-mosca em homenagem a alguns professores da FATEC - Americana</p>
           <br><br>
-          <p><a href="#pro" class="gradiente btn btn-primary btn-block" disabled>Inativo</a>
+          <p><a href="./PROJETOS/DPREVANGE/index.html" class="gradiente btn btn-primary btn-block" >Abrir</a>
           </p>
         </div>
       </div>
