--- a/PROJETOS/DPREVANGE/index.html
+++ b/PROJETOS/DPREVANGE/index.html
@@ -4,7 +4,7 @@
 <head>
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>Mata Mosca</title>
+		<title>DP Revenge</title>
 		<link href="data:image/x-icon;base64,AAABAAEAEBACAAAAAACwAAAAFgAAACgAAAAQAAAAIAAAAAEAAQAAAAAAQAAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADnwAAAZ8AADifAAA8nwAAPJ8AADyfAAA8gwAAPIEAADyYAAA8nAAAPJwAADycAAA8nAAAOJgAAAGBAAADgwAA"
 			rel="icon" type="image/x-icon" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
