--- a/PROJETOS/DPREVANGE/index.html
+++ b/PROJETOS/DPREVANGE/index.html
@@ -28,10 +28,10 @@
 
 			<div class="row">
 				<div class="col">
-					<div class="d-flex justify-content-center">
+					<div style="" class="d-flex justify-content-center">
 						<div class="mb-2">
-							<select class="form-control " id="nivel">
-								<option value="">-- Selecione o nível --</option>
+							<select  class="form-control " id="nivel">
+								<option value="">-- Nível --</option>
 								<option value="geek">Geek</option>
 								<option value="nerd">Nerd</option>
 								<option value="chucknorris">Chuck Norris</option>
@@ -39,14 +39,11 @@
 						</div>
 					</div>
 				</div>
-			</div>
-
-			<div class="row">
 				<div class="col">
-					<div class="d-flex justify-content-center">
-						<button type="button" class="btn btn-danger btn-lg" onclick="select('jogar')">Iniciar Jogo</button>
+						<div class="d-flex justify-content-center">
+							<button type="button" class="btn btn-danger btn-lg" onclick="select('jogar')">Iniciar Jogo</button>
+						</div>
 					</div>
-				</div>
 			</div>
 		</div>
 	</div>
