--- a/PROJETOS/DPREVANGE/index.html
+++ b/PROJETOS/DPREVANGE/index.html
@@ -41,7 +41,7 @@
 				</div>
 				<div class="col">
 						<div class="d-flex justify-content-center">
-							<button type="button" class="btn btn-danger btn-lg" onclick="select('jogar')">Iniciar Jogo</button>
+							<button type="button" class="btn btn-danger " onclick="select('jogar')">Iniciar Jogo</button>
 						</div>
 					</div>
 			</div>
