--- a/PROJETOS/DPREVANGE/index.html
+++ b/PROJETOS/DPREVANGE/index.html
@@ -28,7 +28,7 @@
 
 			<div class="row">
 				<div class="col">
-					<div style="" class="d-flex justify-content-center">
+					<div class="d-flex justify-content-center">
 						<div class="mb-2">
 							<select  class="form-control " id="nivel">
 								<option value="">-- Nível --</option>
@@ -41,7 +41,7 @@
 				</div>
 				<div class="col">
 						<div class="d-flex justify-content-center">
-							<button type="button" class="btn btn-danger " onclick="select('jogar')">Iniciar Jogo</button>
+							<button type="button" class="btn btn-danger  / ,,lçl/çok[" onclick="select('jogar')">Iniciar Jogo</button>
 						</div>
 					</div>
 			</div>
