--- a/index.html
+++ b/index.html
@@ -59,30 +59,24 @@
 
   <!--NavbarMobile -->
 
-  <nav class="navbar d-block d-md-none fixed-bottom cima navbar-expand-lg navbar-dark gradiente bg-dark">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav2" aria-controls="navbarNav"
-      aria-expanded="true" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon jnavbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav2">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item active" data-toggle="collapse" data-target="#navbarNav2">
-          <a class="nav-link" href="#">INICIO <span class="sr-only">(current)</span></a>
+  <nav style="padding: 0.2rem  0.2rem" class="nmobi navbar d-block d-md-none fixed-bottom cima navbar-expand-lg navbar-dark gradiente bg-dark">
+      <ul id="nmobi" class="navbar-nav flex-row ml-auto justify-content-between">
+        <li class="nav-item active">
+          <a class="nav-link" href="#"><img src="./img/n-home.png">INICIO <span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item" data-toggle="collapse" data-target="#navbarNav2">
-          <a class="nav-link" href="#res">RESUMO</a>
+        <li class="nav-item" >
+          <a class="nav-link" href="#res"><img src="./img/n-resumo.png">RESUMO</a>
         </li>
-        <li class="nav-item" data-toggle="collapse" data-target="#navbarNav2">
-          <a class="nav-link" href="#cer">CERTIFICADOS</a>
+        <li class="nav-item" >
+          <a class="nav-link" href="#cer"><img src="./img/n-certificados.png">CERTIFICADOS</a>
         </li>
-        <li class="nav-item" data-toggle="collapse" data-target="#navbarNav2">
-          <a class="nav-link" href="#pro">PROJETOS</a>
+        <li class="nav-item" >
+          <a class="nav-link" href="#pro"><img src="./img/n-projetos.png">PROJETOS</a>
         </li>
-        <li class="nav-item" data-toggle="collapse" data-target="#navbarNav2">
-          <a class="nav-link" href="#con">CONTATOS</a>
+        <li class="nav-item" >
+          <a class="nav-link" href="#con"><img src="./img/n-contatos.png">CONTATOS</a>
         </li>
       </ul>
-    </div>
   </nav>
 
   <!--HEADER-->
