--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <nav style="padding: 0.3rem  0.2rem 0.2rem 0.2rem" class="nmobi navbar d-block d-md-none fixed-bottom cima navbar-expand-lg navbar-dark gradiente bg-dark">
       <ul id="nmobi" class="navbar-nav flex-row ml-auto justify-content-between">
         <li class="nav-item active">
-          <a class="nav-link" href="#"><img src="./img/n-home.png">INICIO <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#"><img src="./img/n-home.png">INICIO </span></a>
         </li>
         <li class="nav-item" >
           <a class="nav-link" href="#res"><img src="./img/n-resumo.png">RESUMO</a>
