--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
       </div>
     </div>
   </div>
-  <div class="container-fluid listra  text-center">
+  <div style="margin-bottom: 3vh; " class="container-fluid  text-center">
     <div class="row">
       <div class="col-12 fa-2x jnome">
         <a href="https://www.facebook.com/joodrew"><i class="fab fa-facebook"></i></a>
@@ -322,11 +322,11 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-12">
+      <div style="margin-bottom: 3vh;" class="col-12">
         <h1 class="jnome">JOELSON FELIPE FIRMINO</h1>
       </div>
       <div class="row d-block d-md-none">
-        <br><br><br><br>
+        <br><br><br>
       </div>
     </div>
   </div>
