--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
       </div>
     </div>
     <div class="row">
-      <div style="margin-bottom: 3vh;" class="col-12">
+      <div  class="nome col-12">
         <h1 class="jnome">JOELSON FELIPE FIRMINO</h1>
       </div>
       <div class="row d-block d-md-none">
