--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
         <div class="col-xs-12 col-md-7">
           <p>Meu nome é Joelson Felipe Firmino, tenho 2 lindos filhos e uma linda esposa.
             <br>Sou um profissional competente e de confiança, comprometido com o trabalho de qualidade.
-            <br>Versátil na resolução de problemas maximizando recursos.
-            <br>Entusiasmado, confiável e auto motivado.
-            <br>Hábil em lidar com o público, com diplomacia e profissionalismo.
-            <br>Capacidade de adaptação a novos equipamentos e tecnologias.
+            <br>Tambem versátil na resolução de problemas maximizando recursos.
+            <br>Muito entusiasmado, confiável e auto motivado.
+            <br>Me considero hábil em lidar com o público, com diplomacia e profissionalismo.
+            <br>Com alta capacidade de adaptação a novos equipamentos e tecnologias.
             <br>Excelentes capacidades de análise, escrita, raciocínio e de tecnologia da informação.
           </p>
         </div>
@@ -209,6 +209,7 @@
 
         </a>
       </div>
+      
       <!--OFFICE -->
       <!--
          <div>
